--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/garage?serverTimezone=UTC
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=An100116!
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 spring.jpa.show-sql=true
