--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/garage?serverTimezone=UTC
 
 spring.datasource.username=root
-spring.datasource.password=An100116!
+spring.datasource.password=
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
